--- a/client/src/pages/Forum/forum.scss
+++ b/client/src/pages/Forum/forum.scss
@@ -130,7 +130,7 @@
       }
     }
 
-    .list-post {
+    .post-list {
       font-family: 'Roboto', sans-serif;
       font-size: 0.7em;
       display: block;
