--- a/client/src/pages/Forum/forum.scss
+++ b/client/src/pages/Forum/forum.scss
@@ -138,11 +138,16 @@
       }
     }
 
+    .list-posts {
+      width: 100%;
+      margin: 0.5em;
+    }
+
     .post-list {
       font-family: 'Roboto', sans-serif;
       font-size: 0.7em;
       display: block;
-      width: 96%;
+      width: 100%;
       border-radius: 0.5em;
 
       background-color: #ffffff;
@@ -153,10 +158,8 @@
       padding-bottom: 0.3em;
       padding-left: 0.8em;
       padding-right: 0.8em;
-      margin-bottom: 1em;
-      margin-top: 0.6em;
-      margin-left: 0.6em;
-      margin-right: 0.6em;
+      margin-bottom: 0.5em;
+      
       @media (max-width: $medium) {
         width: 75%;
       }
@@ -165,10 +168,6 @@
         width: 90%;
       }
       
-    }
-
-    .list-posts {
-      width: 100%;
     }
   }
 }
