--- a/client/src/pages/Recipes/recipes.scss
+++ b/client/src/pages/Recipes/recipes.scss
@@ -34,3 +34,173 @@
     }
   }
 }
+
+div.recipe-list {
+  width: 100%;
+  &-item {
+    box-sizing: border-box;
+    width: 100%;
+    margin: 1.5em auto;
+    padding: 0;
+    font-family: $neutra;
+    transition: $ease-all-long;
+    color: $gray;
+    .row-1 {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      .name {
+        margin: 0;
+        display: inline;
+        font-family: $neutra-bold;
+        font-size: 1.5em;
+      }
+      .quantity {
+        margin: 0;
+        display: inline;
+        font-size: 1.5em;
+      }
+    }
+    .row-2 {
+      margin: 0.5em 0 1em;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      .location {
+        margin: 0;
+        display: inline;
+        font-size: 1.25em;
+      }
+      .expiration {
+        margin: 0;
+        display: inline;
+        font-size: 1.5em;
+        span {
+          padding: 4px 12px;
+          border-radius: 10px;
+        }
+      }
+    }
+    .row-3 {
+      text-align: right;
+      button {
+        margin-right: 10px;
+        display: inline;
+        padding: 0.2em 0.75em;
+        font-size: 1.25em;
+        border-radius: 10px;
+        font-family: $neutra-bold;
+        color: $primary;
+        background-color: #f0ecff;
+        border: 2px solid #e3dcff;
+        cursor: pointer;
+        transition: $bezier;
+        &:hover {
+          transform: scale(1.1);
+        }
+        &:focus {
+          outline: 0;
+        }
+        &:last-child {
+          margin-right: 0;
+        }
+      }
+    }
+  }
+}
+
+table.recipe-list {
+  margin-top: 35px;
+  width: 100%;
+  border-collapse: collapse;
+  border-spacing: 10px;
+  font-size: 1.3em;
+  @media (max-width: $large) {
+    font-size: 1em;
+  }
+  @media (max-width: $medium) {
+    font-size: 1.15em;
+  }
+  tbody {
+    box-sizing: border-box;
+    margin: 1.5em auto;
+    padding: 0;
+    font-family: $neutra;
+    transition: $ease-all-long;
+    color: $gray;
+    tr {
+      border-bottom: 2px solid #e3dcff;
+      &:last-child {
+        border: none;
+      }
+      td {
+        font-size: 1.25em;
+        padding: 0.2em 0;
+        @media (min-width: $large) {
+          padding: 0.6em 0;
+        }
+        @media (max-width: $large) {
+          padding: 0.3em 0;
+        }
+        &:last-child {
+          width: 1%;
+          white-space: nowrap;
+        }
+        button {
+          margin-right: 10px;
+          display: inline;
+          padding: 0.2em 0.75em;
+          font-size: 0.9em;
+          border-radius: 5px;
+          border-radius: 10px;
+          font-family: $neutra-bold;
+          color: $primary;
+          background-color: #f0ecff;
+          border: 2px solid #e3dcff;
+          cursor: pointer;
+          transition: $bezier;
+          &:hover {
+            transform: scale(1.1);
+          }
+          &:focus {
+            outline: 0;
+          }
+          &:last-child {
+            margin-right: 0;
+          }
+        }
+        .expiration-span {
+          padding: 0.2em 0.75em;
+          border-radius: 10px;
+        }
+      }
+    }
+  }
+  thead {
+    box-sizing: border-box;
+    margin: 1.5em auto;
+    font-family: $neutra-bold;
+    text-align: left;
+    transition: $ease-all-long;
+    color: $primary;
+
+    tr {
+      border-bottom: 2px solid #e3dcff;
+      th {
+        font-size: 1.5em;
+        background-color: #f0ecff;
+        padding: 0.25em 0em;
+        &:first-child {
+          border-radius: 10px 0 0 0;
+        }
+        &:last-child {
+          border-radius: 0 10px 0 0;
+        }
+      }
+    }
+  }
+}
+
+.open-modal {
+  cursor: pointer;
+}
